Fix a typo and a table spacing issue.

--- a/thesis.tex
+++ b/thesis.tex
@@ -586,7 +586,7 @@ Stage & TNM Categories & Interpretation \\
 \multirow{3}{*}{I}   & T1 N0 M0       & \multirow{3}{*}{low stage} \\
                      & T0 N1mi M0     & \\
                      & T1 N1mi M0     & \\[4pt]
-\multirow{6}{*}{II}  & T0 N1 M0       & \multirow{6}{*}{intermediate stage} \\
+\multirow{5}{*}{II}  & T0 N1 M0       & \multirow{6}{*}{intermediate stage} \\
                      & T1 N1 M0       & \\
                      & T2 N0 M0       & \\
                      & T2 N1 M0       & \\
@@ -1015,7 +1015,7 @@ The RNA-seq data used in studies \I, \III, and \IV are based on libraries origin
 
 The customized dUTP protocol used for all \scanb{} samples included in the studies within this thesis is described in detail in study \I, and the steps are summarized in Figure~\ref{fig:dutp}. In brief, starting from 1$\mu{g}$ total RNA, mRNA is purified using poly-DT DynaBeads (Thermo Fisher Scientific), and subjected to Zinc-mediated fragmentation (Ambion). The resulting approximately 240bp fragments are isolated using Zymo spin columns (Zymo Research). Using the fragmented mRNA as input, first-strand cDNA synthesis is performed by adding random hexamer primers, reverse transcriptase, and dNTPs. Following cleanup of excess reagents, second-strand synthesis is initiated by adding polymerase and dNTPs with dUTP instead of dTTP. Resulting double-stranded cDNA is isolated using Zymo spin columns (Zymo Research), followed by 5'/3' end-repair and ligation of Illumina TruSeq sequencing adapters (Illumina), including sample barcodes. Size-selection is then performed to remove excess free adapters. To preserve strandedness, the dUTP-containing second cDNA strand is digested using uracil-DNA glycolase (UDG).
 
-An important parameter in a sequencing setup is the average depth of coverage or number of reads to target for each samples. In a DNA-seq experiment, sequencing reads are distributed approximately uniformly along the targeted area of genome. An example target depth is 30X, meaning on average each targeted base is covered by 30 reads. Deviations from the uniform coverage assumption occur due to biases during library preparation and sequencing, for example caused by GC-rich regions \cite{Benjamini:2012, Ross:2013}. RNA-seq differs from DNA-seq in that reads are distributed approximately proportional to their expression level in the input sample, meaning that the average sequencing depth across an RNA-seq dataset is not a useful metric. Instead, the total number of sequencing reads is used to express how deep one has sequenced.
+An important parameter in a sequencing setup is the average depth of coverage or number of reads to target for each sample. In a DNA-seq experiment, sequencing reads are distributed approximately uniformly along the targeted area of genome. An example target depth is 30X, meaning on average each targeted base is covered by 30 reads. Deviations from the uniform coverage assumption occur due to biases during library preparation and sequencing, for example caused by GC-rich regions \cite{Benjamini:2012, Ross:2013}. RNA-seq differs from DNA-seq in that reads are distributed approximately proportional to their expression level in the input sample, meaning that the average sequencing depth across an RNA-seq dataset is not a useful metric. Instead, the total number of sequencing reads is used to express how deep one has sequenced.
 
 % HiSeq 2000: 2 flowcells with 8 lanes each, 16 samples multiplexes
 % NextSeq 500: 1 flowcell with 4 lanes; automatic distribution across all lanes, first 16 then 24 samples multiplexed
